swagger ShareGroupDeck
